# Ai_powered_job_recommendation_system_with_mcp

./: README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
